# LP_Wireless_Sensor_nRF54

./: .gitignore  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml  deploy-backend.yml  deploy-infrastructure.yml  deploy-web.yml
apps/web/: .env.example  index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
backend/api/: .env.example  package.json  tsconfig.json
common/: package.json  tsconfig.json
common/protocol/: ble-protocol.ts  ipc-protocol.ts
docs/: API.md  DEPLOYMENT.md  DEVELOPER_SETUP.md  ENVIRONMENTS.md  PROJECT_COMPLETE.md  PROJECT_STATUS.md  PROJECT_STATUS_NEW.md  TESTING.md
docs/operations/: README.md
firmware/hub_nrf54l15_ble/: CMakeLists.txt  README.md  prj.conf
firmware/hub_nrf54l15_ble/src/: main.c
firmware/hub_nrf54l15_ble/src/ble_central/: connection_manager.c  connection_manager.h  gatt_client.c  gatt_client.h  scanner.c  scanner.h
firmware/hub_nrf54l15_ble/src/ipc/: ipc_handler.c  ipc_handler.h
firmware/hub_nrf54l15_ble/src/job_executor/: job_executor.c  job_executor.h
firmware/hub_nrf54l15_ble/src/node_manager/: node_manager.c  node_manager.h
firmware/hub_nrf54l15_ble/src/storage/: storage.c  storage.h
firmware/hub_nrf91_cellular/: CMakeLists.txt  README.md  prj.conf
firmware/hub_nrf91_cellular/src/: main.c
firmware/hub_nrf91_cellular/src/azure/: device_twin.c  device_twin.h  iot_hub_client.c  iot_hub_client.h  provisioning.c  provisioning.h
firmware/hub_nrf91_cellular/src/ipc/: ipc_bridge.c  ipc_bridge.h
firmware/hub_nrf91_cellular/src/network/: lte_connection.c  lte_connection.h
(+95 files in other folders)
